--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,5 +5,42 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  padding: 0 36px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.heading {
+  position: relative;
+  width: fit-content;
+  align-self: center;
+  margin-bottom: 60px;
+
+  h3 {
+    font: Bold 40px/49px Montserrat;
+    color: $red;
+  }
+
+  hr {
+    width: 40px;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    bottom: -10px;
+    border: 2.5px solid $red;
+  }
+}
+
+.container {
+  padding: 60px 36px 100px;
 }
