--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,3 +1,5 @@
+@import "global/variables.scss";
+
 nav {
   margin: 0 36px;
   height: 95px;
@@ -7,8 +9,60 @@ nav {
 
   .toggler {
     align-self: flex-end;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    padding: 0;
     border: 0;
     outline: 0;
     background: 0;
+
+    > span {
+      width: 23px;
+      height: 4px;
+      border-radius: 5px;
+      background: $brown;
+      margin-bottom: 4px;
+    }
+
+    .open {
+      transition: all 0.2s;
+    }
+
+    span:last-child {
+      margin: 0;
+    }
+
+    .bar.open:nth-of-type(1) {
+      transform: rotate(45deg);
+      transform-origin: 10% 10%;
+      margin: 0;
+    }
+
+    .bar.open:nth-of-type(2) {
+      opacity: 0;
+      filter: alpha(opacity=0);
+    }
+
+    .bar.open:nth-of-type(3) {
+      transform: rotate(-45deg);
+      transform-origin: 10% 90%;
+      margin: 0;
+    }
+
+    .bar:nth-of-type(1) {
+      transform: rotate(0);
+      margin-bottom: 4px;
+    }
+
+    .bar:nth-of-type(2) {
+      opacity: 1;
+      filter: alpha(opacity=100);
+    }
+
+    .bar:nth-of-type(3) {
+      transform: rotate(0);
+    }
   }
 }
