--- a/src/styles/drawer.scss
+++ b/src/styles/drawer.scss
@@ -1,21 +1,24 @@
 @import "global/variables.scss";
 
 .drawer {
-  align-self: flex-end;
-  width: 210px;
   height: 100vh;
+  width: 0;
   margin: 0;
   padding: 0;
+  transition: 0.3s width;
   display: flex;
   flex-direction: column;
   align-items: center;
   background: $brown;
+  position: absolute;
+  right: 0;
 
   li:first-child {
     margin-top: 50px;
   }
 
   li {
+    display: none;
     margin-bottom: 30px;
     font: Bold 24px/29px Montserrat;
     color: $background;
@@ -23,9 +26,17 @@
   }
 }
 
+.drawer-open {
+  width: 50%;
+  height: 100vh;
+  li {
+    display: initial;
+  }
+}
+
 .drawer-content {
   position: absolute;
-  right: 200px;
+  right: 50%;
   height: 100vh;
   overflow: hidden;
 }
