--- a/src/styles/drawer.scss
+++ b/src/styles/drawer.scss
@@ -13,23 +13,21 @@
   position: absolute;
   right: 0;
 
-  li:first-child {
+  .nav-item:first-child {
     margin-top: 50px;
   }
 
-  li {
+  .nav-item {
     display: none;
     margin-bottom: 30px;
-    font: Bold 24px/29px Montserrat;
-    color: $background;
-    list-style-type: none;
   }
 }
 
 .drawer-open {
   width: 50%;
   height: 100vh;
-  li {
+
+  .nav-item {
     display: initial;
   }
 }
