--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -5,6 +5,7 @@
   padding-bottom: 100px;
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   p {
     color: $background;
@@ -15,6 +16,11 @@
     margin-top: 60px;
     height: 100%;
     width: 214px;
-    align-self: center;
+  }
+
+  @media (min-width: 768px) {
+    img {
+      width: 300px;
+    }
   }
 }
