--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,33 +2,63 @@
 
 footer {
   padding-top: 60px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   text-align: center;
   background: $brown;
   color: white;
 
-  > section {
-    padding-bottom: 60px;
+  .footer-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
-  section:last-child {
-    > svg {
-      margin-right: 30px;
-      font-size: 14px;
+  .footer-content {
+    > section {
+      padding-bottom: 60px;
     }
-    svg:last-child {
-      margin: 0;
+
+    .socials {
+      a {
+        color: white;
+      }
+
+      > a {
+        margin-right: 30px;
+        font-size: 14px;
+      }
+
+      a:last-child {
+        margin: 0;
+      }
+    }
+
+    h6 {
+      font: Bold 10px/12px Montserrat;
+      margin-bottom: 24px;
+    }
+
+    p {
+      font: 14px/24px Montserrat;
     }
   }
+  @media (min-width: 1200px) {
+    padding: 60px 0;
+    text-align: left;
 
-  h6 {
-    font: Bold 10px/12px Montserrat;
-    margin-bottom: 24px;
-  }
+    .footer-content {
+      width: 1140px;
+      margin: 0 auto;
+      flex-direction: row;
+      align-items: flex-start;
 
-  p {
-    font: 14px/24px Montserrat;
+      > section {
+        padding: 0;
+        margin-right: 125px;
+      }
+
+      .socials {
+        margin: 0 0 0 auto;
+      }
+    }
   }
 }
