--- a/src/styles/global/styles.scss
+++ b/src/styles/global/styles.scss
@@ -43,6 +43,8 @@ p {
 
 .content {
   width: 100%;
+  display: flex;
+  flex-direction: column;
   position: absolute;
   right: 0;
   transition: right 0.3s;
