--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -29,14 +29,35 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+
     h1 {
       width: 316px;
       text-align: center;
       font: Bold 40px/49px Montserrat;
     }
+
     p {
       text-align: center;
       font-size: 26px;
+    }
+
+    @media (min-width: 1200px) {
+      padding: 180px 0;
+      width: 1140px;
+      align-self: center;
+      align-items: flex-start;
+
+      h1 {
+        width: 100%;
+        text-align: left;
+      }
+
+      p {
+        margin: 5px 0 0;
+        text-align: left;
+        font-size: 32px;
+        line-height: 40px;
+      }
     }
   }
 }
