--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -67,6 +67,7 @@
           cursor: pointer;
           margin-bottom: 10px;
         }
+
         button:last-child {
           margin: 0;
         }
@@ -108,14 +109,23 @@
         .buttons {
           margin-right: 35px;
           flex-direction: row;
+
           > button {
             margin-right: 25px;
           }
+
           .demo {
             margin-bottom: 0;
           }
         }
       }
+    }
+  }
+  @media (min-width: 1200px) {
+    align-items: center;
+
+    .card {
+      width: 674px;
     }
   }
 }
