--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -23,4 +23,23 @@
       width: 300px;
     }
   }
+  @media (min-width: 1200px) {
+    padding: 60px 0 150px;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(2, (1140px / 2));
+
+    .heading {
+      margin-bottom: 42px;
+      grid-column: span 2;
+      justify-self: center;
+    }
+
+    img {
+      width: 214px;
+      height: auto;
+      margin: 0;
+      justify-self: flex-end;
+    }
+  }
 }
