--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -13,9 +13,11 @@
     margin-bottom: 60px;
 
     .image {
-      height: 360px;
-      width: 100%;
-      background: grey;
+      display: block;
+      height: auto;
+      max-width: 100%;
+      object-fit: cover;
+      background: wheat;
     }
 
     .body {
@@ -54,28 +56,34 @@
         }
       }
 
-      .buttons {
+      .links {
         display: flex;
         flex-direction: column;
 
-        > button {
+        > a {
           outline: 0;
           cursor: pointer;
           margin-bottom: 10px;
         }
 
-        button:last-child {
+        a:last-child {
           margin: 0;
         }
 
         .btn {
+          display: flex;
+          align-items: center;
+          justify-content: center;
           font: Bold 15px/19px Montserrat;
           width: 125px;
-          height: 35px;
+          height: 32px;
           background: white;
           box-shadow: 0px 0px 5px #00000029;
           border: 2px solid black;
           border-radius: 10px;
+          transition: 0.3s;
+          text-align: center;
+          text-decoration: none;
         }
 
         .demo {
@@ -83,9 +91,19 @@
           border-color: $red;
         }
 
+        .demo:hover {
+          color: white;
+          background: $red;
+        }
+
         .github {
           color: $brown;
           border-color: $brown;
+        }
+
+        .github:hover {
+          color: white;
+          background: $brown;
         }
       }
     }
@@ -107,11 +125,11 @@
           align-items: flex-start;
         }
 
-        .buttons {
+        .links {
           margin-right: 35px;
           flex-direction: row;
 
-          > button {
+          > a {
             margin-right: 25px;
           }
 
